Bug 568068 - fix jscntxt/jsnativestack build breaks on OS/2 (r=wuno)