js/src/jsnativestack.cpp
@@ -43,6 +43,10 @@
 #ifdef XP_WIN
 # include <windows.h>
 
+#elif defined(XP_OS2)
+# define INCL_DOSPROCESS
+# include <os2.h>
+
 #elif defined(XP_MACOSX) || defined(DARWIN) || defined(XP_UNIX)
 # include <pthread.h>
 
@@ -142,7 +146,19 @@ GetNativeStackBaseImpl()
 # endif
 }
 
-#else /* !XP_WIN */
+#elif defined(XP_OS2)
+
+void *
+GetNativeStackBaseImpl()
+{
+    PTIB  ptib;
+    PPIB  ppib;
+
+    DosGetInfoBlocks(&ptib, &ppib);
+    return ptib->tib_pstacklimit;
+}
+
+#else /* XP_UNIX */
 
 void *
 GetNativeStackBaseImpl()
